# MA_01_MiniCRM

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md
supportdesk_ai/: __init__.py  agents.py  check_bot.py  config.py  demo.py  formatting.py  models.py  repository.py  service.py  telegram_bot.py  triage.py
tests/: test_service.py
